--- a/shop.html
+++ b/shop.html
@@ -21,7 +21,7 @@
         </script>
     <header>
         <div class="inner">
-            <a class="logo" href="kodak.html"><img src="logo.png"></a>
+            <a class="logo" href="index.html"><img src="logo.png"></a>
             <ul class="topmenu">
                 <li><a href="login.html">로그인</a></li>
                 <li><a href="#">회원가입</a></li>
